@@ -12,6 +12,7 @@ Changes in Release 2.6.0
 [JOST-195] - Use system property-based override for our custom ESAPI config rather than ESAPI locator class call 
 [JOST-196] - On MetadataProviderCredentialResolver, expose the MetadataProvider used to construct the resolver
 [JOST-197] - XML providers for Async Logout extensions
+[JOST-198] - Configuration files for XMLObject providers often missing Type registrations
 
 Changes in Release 2.5.3
 =============================================
